--- a/index.html
+++ b/index.html
@@ -1,45 +1,227 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
+<!--
+	Miniport by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	FontAwesome Updated to v5.8.1. by DAS
+-->
 <html>
-<head>
-<title>dSchulman Marketing New</title>
-<style>
-body
-{
-background-image:url('cathbldg.jpg');
-background-size:100%;
-background-repeat:no-repeat;
-} 
-</style>
+	<head>
+		<title>Dan Schulman | Online Marketing Consultant</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	</head>
+	<body class="is-preload">
 
-</head>
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Top</a></li>
+					<li><a href="#focus">Focus</a></li>
+					<li><a href="#work">Past Work</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
 
-<body>
-<!--div style="float:right;background-color:#ffffff;padding:8px;border:ridge black 4px;margin-right:18px;margin-top:18px;">
-<h1>dSchulman Marketing</h1>
-<h2>Thank you for visiting our web site</h2>
-<h3>We only maintain the domain for email</h3>
-<h3>New clients accepted by referral only</h3>
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/profile-pic-small.png	" alt="dan schulman" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1><strong>Dan Schulman</strong></h1>
+							</header>
+							<p>Online Marketing Consultant &mdash; B2C Customer Acquisition and Engagement. Cross-Channel Strategy and Management. Staff Scoping and Training.</p>
+							<p>See my <a href="https://www.linkedin.com/in/daniel-schulman-8448792/"><i class="fab fa-linkedin"></i></a> <a href="https://www.linkedin.com/in/daniel-schulman-8448792/">LinkedIn Profile</a></p>
+						</div>
+					</div>
+				</div>
+			</article>
 
-<h4>
-PO Box 718<br/>
-Oakland, CA 94604
-</h4>
-<span style="display:none;">written by <a href="https://plus.google.com/u/0/111115722861091510533?rel=author">Daniel Schulman</a> | </span>
-<span style="display:none;">published by <a href="https://plus.google.com/112947989424136116523" rel="publisher" />dSchulman Marketing</a></span>
-</div-->
-	
+		<!-- Focus -->
+			<article id="focus" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Where I Can Help</h2>
+						<p>Deep expertise in search &mdash; both paid search (SEM) and organic (SEO). With broad capability in other digital marketing channels, I can also help formulate your customer acquisition and engagement strategies.</p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<i class="icon fas fa-5x fa-chess"></i>
+								<h3>Marketing Strategy</h3>
+								<p>Attribution Model, Channel Mix, KPIs, Roadmap. You got questions, we can help find answers.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<i class="icon fas fa-5x fa-search-dollar"></i>
+								<h3>Channel Management</h3>
+								<p>Audits, Interim Management, Special Projects. For most channels, we can backfill or take you to a new level.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<i class="icon fas fa-5x fa-users"></i>
+								<h3>Staffing</h3>
+								<p>Plan staffing requirements, train existing staff, and help select outside agencies and contractors.</p>
+							</section>
+						</div>
+					</div>
+					<!--footer>
+						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<a href="#clients" class="button large scrolly">See some of my recent work</a>
+					</footer-->
+				</div>
+			</article>
+			
 
-<br />
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-7925234-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-</div>
+		<!-- Portfolio -->
+			<article id="work" class="wrapper style3">
+				<div class="container">
+					<header>
+						<h2>Places I've Worked and Clients I've Helped</h2>
+						<!--p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p-->
+					</header>
+					<div class="row">
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.liftopia.com" rel="noreferrer nofollow" class="image featured"><img src="images/liftopia.png" alt="skier" /></a>
+								<h3><a href="https://www.liftopia.com" rel="noreferrer nofollow" >Liftopia</a></h3>
+								<p>As VP Marketing, lead team that managed performance channels for consumer lift ticket marketplace and fielded branding campaigns</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.viator.com/" rel="noreferrer nofollow" class="image featured"><img src="images/trip.png" alt="eiffel tower" /></a>
+								<h3><a href="https://www.viator.com/" rel="noreferrer nofollow" >TripAdvisor / Viator</a></h3>
+								<p>As Head of Performance Marketing Attractions, managed global teams, multiple languages, and media budgets in the tens of millions of dollars</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.pandora.com" rel="noreferrer nofollow" class="image featured"><img src="images/pandora.png" alt="music" /></a>
+								<h3><a href="https://www.pandora.com" rel="noreferrer nofollow" >Pandora</a></h3>
+								<p>Took their in-house SEM program and brought it up to best practices. SEO project on the homepage. Learned people really like XMAS music</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.worldwildlife.org/" rel="noreferrer nofollow" class="image featured"><img src="images/tiger.png" alt="tiger" /></a>
+								<h3><a href="https://www.worldwildlife.org/" rel="noreferrer nofollow" >World Wildlife Fund</a></h3>
+								<p>Data Analytics project across international websites to determine what content drove site visitors and any impacts on fundraising</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.habitat.org/" rel="noreferrer nofollow" class="image featured"><img src="images/earthquake.png" alt="earthquake" /></a>
+								<h3><a href="https://www.habitat.org/"rel="noreferrer nofollow" >Habitat for Humanity</a></h3>
+								<p>Working with Donordigital (MWA), helped with disaster fundraising. Developed protocols to launch SEM campaigns quickly after events</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="https://www.commonsensemedia.org/" rel="noreferrer nofollow" class="image featured"><img src="images/movie.png" alt="movie" /></a>
+								<h3><a href="https://www.commonsensemedia.org/" rel="noreferrer nofollow" >Common Sense Media</a></h3>
+								<p>As part of a longterm SEO engagement, worked cross-departmentally to secure top ranks for highly competitive movie terms against well-entrenched players</p>
+							</article>
+						</div>
+					</div>
+					<footer>
+						<p>Something along these lines I can help you with?</p>
+						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+					</footer>
+				</div>
+			</article>
 
-</body>
+		<!-- Contact -->
+			<article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Send Me a Message</h2>
+						<p>If you are looking for help with customer acquisition and engagement</p>
+					</header>
+					<div class="row">
+						<div class="col-12">
+							<form action="https://formspree.io/dan@dschulman.com" method="POST" />
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</div>
+						<!--div class="col-12">
+							<hr />
+							<h3>Find me on ...</h3>
+							<ul class="social">
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								
+								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
+								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
+								<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
+								<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
+								<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
+								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
+								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
+								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
+								
+							</ul>
+							<hr />
+						</div-->
+					</div>
+					<footer>
+					    <hr />
+						<ul id="copyright">
+							<li>&copy; 2019 Daniel Schulman. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Work Images: <a href="http://unsplash.com">Unsplash</a></li>
+							<li>Skier: <a href="https://unsplash.com/photos/VXiG4N229uY">Nicolai Berntsen</a></li><li>Eiffel Tower: <a href="https://unsplash.com/photos/nnzkZNYWHaU">Chris Karidis</a></li><li>Music: <a href="https://unsplash.com/photos/aWXVxy8BSzc">Hanny Naibaho</a></li><li>Tiger: <a href="https://unsplash.com/photos/Si6Obte6Bu0">Sander Wehkamp</a></li><li>Earthquake: <a href=" https://commons.wikimedia.org/wiki/File:Aftermath_of_the_2017_Chiapas_earthquake.jpg">Presidencia de la República Mexicana</a></li><li>Movie: <a href="https://unsplash.com/photos/Wfh650C1OHU">Peter Lewicki</a></li>
+
+						</ul>
+					</footer>
+				</div>
+			</article>
+
+		<!-- PHOTO CREDITS
+		Skier Nicolai Berntsen https://unsplash.com/photos/VXiG4N229uY
+		Eiffel Tower Chris Karidis https://unsplash.com/photos/nnzkZNYWHaU
+		Music Hanny Naibaho https://unsplash.com/photos/aWXVxy8BSzc
+		Tiger Sander Wehkamp https://unsplash.com/photos/Si6Obte6Bu0
+		Earthquake Presidencia de la República Mexicana https://commons.wikimedia.org/wiki/File:Aftermath_of_the_2017_Chiapas_earthquake.jpg [CC BY 2.0 (https://creativecommons.org/licenses/by/2.0)]
+		Movie Peter Lewicki https://unsplash.com/photos/Wfh650C1OHU
+		-->
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
