--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<title>Dan Schulman | Online Marketing Consultant</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
@@ -68,8 +69,8 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<i class="icon fas fa-5x fa-users"></i>
-								<h3>Staffing</h3>
-								<p>Plan staffing requirements, train existing staff, and help select outside agencies and contractors.</p>
+								<h3>Marketing Staff</h3>
+								<p>Train staff in performance marketing, select digital agencies and contractors, assess requirements</p>
 							</section>
 						</div>
 					</div>
@@ -79,7 +80,7 @@
 					</footer-->
 				</div>
 			</article>
-			
+
 
 		<!-- Portfolio -->
 			<article id="work" class="wrapper style3">
@@ -181,7 +182,7 @@
 								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								
+
 								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
@@ -191,7 +192,7 @@
 								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
 								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
 								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-								
+
 							</ul>
 							<hr />
 						</div-->
