--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 								<h1><strong>Dan Schulman</strong></h1>
 							</header>
 							<p>Online Marketing Consultant &mdash; B2C Customer Acquisition and Engagement. Cross-Channel Strategy and Management. Staff Scoping and Training.</p>
-							<p>See my <a href="https://www.linkedin.com/in/daniel-schulman-8448792/"><i class="fab fa-linkedin"></i></a> <a href="https://www.linkedin.com/in/daniel-schulman-8448792/">LinkedIn Profile</a></p>
+							<p>See my <a href="https://www.linkedin.com/in/daniel-schulman-8448792/">LinkedIn Profile</a> <a href="https://www.linkedin.com/in/daniel-schulman-8448792/"><i class="fab fa-linkedin"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -48,8 +48,8 @@
 			<article id="focus" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Where I Can Help</h2>
-						<p>Deep expertise in search &mdash; both paid search (SEM) and organic (SEO). With broad capability in other digital marketing channels, I can also help formulate your customer acquisition and engagement strategies.</p>
+						<h2>Where We Can Help</h2>
+						<p>Deep expertise in search &mdash; both paid search (SEM) and organic (SEO). With broad capability in other digital marketing channels, we can also help formulate your customer acquisition and engagement strategies.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -86,7 +86,7 @@
 			<article id="work" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Places I've Worked and Clients I've Helped</h2>
+						<h2>Places Worked and Clients Helped</h2>
 						<!--p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p-->
 					</header>
 					<div class="row">
@@ -134,8 +134,8 @@
 						</div>
 					</div>
 					<footer>
-						<p>Something along these lines I can help you with?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
+						<p>Something along these lines we can help you with?</p>
+						<a href="#contact" class="button large scrolly">Get in touch with us</a>
 					</footer>
 				</div>
 			</article>
@@ -144,7 +144,7 @@
 			<article id="contact" class="wrapper style4">
 				<div class="container medium">
 					<header>
-						<h2>Send Me a Message</h2>
+						<h2>Send a Message</h2>
 						<p>If you are looking for help with customer acquisition and engagement</p>
 					</header>
 					<div class="row">
@@ -202,8 +202,9 @@
 						<ul id="copyright">
 							<li>&copy; 2019 Daniel Schulman. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Work Images: <a href="http://unsplash.com">Unsplash</a></li>
 							<li>Skier: <a href="https://unsplash.com/photos/VXiG4N229uY">Nicolai Berntsen</a></li><li>Eiffel Tower: <a href="https://unsplash.com/photos/nnzkZNYWHaU">Chris Karidis</a></li><li>Music: <a href="https://unsplash.com/photos/aWXVxy8BSzc">Hanny Naibaho</a></li><li>Tiger: <a href="https://unsplash.com/photos/Si6Obte6Bu0">Sander Wehkamp</a></li><li>Earthquake: <a href=" https://commons.wikimedia.org/wiki/File:Aftermath_of_the_2017_Chiapas_earthquake.jpg">Presidencia de la República Mexicana</a></li><li>Movie: <a href="https://unsplash.com/photos/Wfh650C1OHU">Peter Lewicki</a></li>
-
 						</ul>
+						<br />
+						<p>Hosted on <a href="https://pages.github.com/">GitHub Pages</a> <a href="https://pages.github.com/"><i class="fab fa-github"></i></a></p>
 					</footer>
 				</div>
 			</article>
