--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7925234-1"></script>
+    <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+       gtag('config', 'UA-7925234-1');
+    </script>
 	</head>
 	<body class="is-preload">
 
@@ -68,9 +76,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<i class="icon fas fa-5x fa-users"></i>
-								<h3>Marketing Staff</h3>
-								<p>Train staff in performance marketing, select digital agencies and contractors, assess requirements</p>
+								<i class="icon fas fa-5x fa-chart-line"></i>
+								<h3>Optimization</h3>
+								<p>Testing frameworks for accounts (bidding, targeting, creatives), landing pages, and conversion funnels.</p>
 							</section>
 						</div>
 					</div>
