new picture and switched we to I

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<header>
 								<h1><strong>Dan Schulman</strong></h1>
 							</header>
-							<p>Online Marketing Consultant &mdash; B2C Customer Acquisition and Engagement. Cross-Channel Strategy and Management. Staff Scoping and Training.</p>
+							<p>Online Marketing Consultant &mdash; B2C Customer Acquisition and Engagement. Cross-Channel Strategy and Management. Ongoing optimization.</p>
 							<p>See my <a href="https://www.linkedin.com/in/daniel-schulman-8448792/">LinkedIn Profile</a> <a href="https://www.linkedin.com/in/daniel-schulman-8448792/"><i class="fab fa-linkedin"></i></a></p>
 						</div>
 					</div>
@@ -56,22 +56,22 @@
 			<article id="focus" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Where We Can Help</h2>
-						<p>Deep expertise in search &mdash; both paid search (SEM) and organic (SEO). With broad capability in other digital marketing channels, we can also help formulate your customer acquisition and engagement strategies.</p>
+						<h2>Where I Can Help</h2>
+						<p>Deep expertise in search &mdash; both paid search (SEM) and organic (SEO). With broad capability in other digital marketing channels, I can also help formulate your customer acquisition and engagement strategies.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<i class="icon fas fa-5x fa-chess"></i>
 								<h3>Marketing Strategy</h3>
-								<p>Attribution Model, Channel Mix, KPIs, Roadmap. You got questions, we can help find answers.</p>
+								<p>Attribution Model, Channel Mix, KPIs, Roadmap. You got questions, I can help find answers.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<i class="icon fas fa-5x fa-search-dollar"></i>
 								<h3>Channel Management</h3>
-								<p>Audits, Interim Management, Special Projects. For most channels, we can backfill or take you to a new level.</p>
+								<p>Audits, Interim Management, Special Projects. For most channels, I can backfill or take you to a new level.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
@@ -142,8 +142,8 @@
 						</div>
 					</div>
 					<footer>
-						<p>Something along these lines we can help you with?</p>
-						<a href="#contact" class="button large scrolly">Get in touch with us</a>
+						<p>Something along these lines you want help with?</p>
+						<a href="#contact" class="button large scrolly">Get in touch ...</a>
 					</footer>
 				</div>
 			</article>
