--- a/track/phone-track.html
+++ b/track/phone-track.html
@@ -39,6 +39,10 @@
 
 <h3><a href="tel:5107174347">call (510) 717-4347</a></h3>
 
+<div>
+  Caltech seismologist Lucy Jones says the area should expect aftershocks to continue for some time. "There is about a 1 in 20 chance that this location will be having an even bigger earthquake within the next few days," Jones said.
 
+  Ridgecrest Mayor Peggy Breeden said she's concerned about more potential damage. Breeden has declared a state of emergency for the city, which she said "allows us to seek services from all the entities, both state and federal, that can help us with the clean-up."
+</div>
 </body>
 </html>
