--- a/products-2.html
+++ b/products-2.html
@@ -32,7 +32,8 @@
         //"quantity": , //need to get from form
         "price": "64.00",
         "dimension5": "Black", // Product-scoped Custom Dimension in index 5
-        "superhero": "batman"
+        "superhero": "batman",
+        "color": "Blue"
         }]
       }
     }
