--- a/dl/products-3.html
+++ b/dl/products-3.html
@@ -30,8 +30,7 @@
         //"position" only one product so not on product details page
         //"coupon": "", //The coupon code associated with a product (e.g. SUMMER_SALE13).
         //"quantity": , //need to get from form
-        "price": "64.00",
-        dimension5: 'Red' // Product-scoped Custom Dimension in index 5
+        "price": "64.00"
         }]
       }
     }
