--- a/dl/products-4.html
+++ b/dl/products-4.html
@@ -34,6 +34,7 @@
         "dimension5": "Green",
         "color": "Yellow",
         "dimension1": "Orange",
+         dimension1: "Pink",
         "superhero": "aquaman"
         }]
       }
