--- a/dl/products-1.html
+++ b/dl/products-1.html
@@ -30,7 +30,11 @@
         //"position" only one product so not on product details page
         //"coupon": "", //The coupon code associated with a product (e.g. SUMMER_SALE13).
         //"quantity": , //need to get from form
-        "price": "64.00"
+        "price": "64.00",
+        "dimension5": "Green",
+        "color": "Yellow",
+        "dimension1": "Orange",
+        "superhero": "aquaman"
         }]
       }
     }
