--- a/dl/products-4.html
+++ b/dl/products-4.html
@@ -32,7 +32,7 @@
         //"quantity": , //need to get from form
         "price": "64.00",
         "dimension5": "Green",
-        "color": "Yellow",
+        color: "Yellow",
         "dimension1": "Orange",
         "superhero": "aquaman"
         }]
