--- a/dl/products-2.html
+++ b/dl/products-2.html
@@ -25,7 +25,7 @@
         "name": "1 Day Hop On Hop Off Tour",
         //"brand": "Adult", Ventrata currently has ticket type as 'brand' it is probably better as 'variant'
         "brand": "San Francisco City Sightseeing",  //most clients this will be a constant, but it might change if they sell other suppliers' products. Brand might also may to differntial margins if need to compute net revenue
-        "category": "San Francisco Hop On Hop Off Tours Bus Tours", //Ventrata uses different versions of category, menu/heading, page title, URL. This is page tittle. Category can be Hierarchical, such as 'Men/Clothing/Shirts', but I do not think it is needed for Ventrata.
+        "category": "dog1/dog2/dog3/dog4/dog5", //Ventrata uses different versions of category, menu/heading, page title, URL. This is page tittle. Category can be Hierarchical, such as 'Men/Clothing/Shirts', but I do not think it is needed for Ventrata.
         "variant": "Adult", //use main ticket type for listing pages
         //"position" only one product so not on product details page
         //"coupon": "", //The coupon code associated with a product (e.g. SUMMER_SALE13).
