--- a/dl/regex.html
+++ b/dl/regex.html
@@ -60,9 +60,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <h1>Test Regex</h1>
 <ul>
-  <li><button type="button" id="but1">button 1</a></li>
-  <li><button type="button" id="but2">button 2</a></li>
-  <li><button type="button" id="but3">button 3</a></li>
+  <li><button type="button" id="but1">button 1</button></li>
+  <li><button type="button" id="but2">button 2</button></li>
+  <li><button type="button" id="but3">button 3</button></li>
 </ul>
 
 
