--- a/dl/index.html
+++ b/dl/index.html
@@ -45,7 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li><a href="/dl/products-3.html">Product Page 2 Day</a></li>
 <li><a href="/dl/checkout.html">Checkout Page</a></li>
 <li><a href="/dl/success.html">Transaction Confirmation Page</a></li>
-<li><a href="https://www.yahoo.com/">Cross Domain</a></li>
+<li><a href="https://www.yahoo.com/" class="classy">Cross Domain</a></li>
 </ul>
 
 
